# flowpost

./: .gitignore  .gitmodules  AUTHORS.rst  FTLE.py  HISTORY.rst  LICENSE  README.md  README.rst  __init__.py  correl_OAT15A2.py  get_line_series_OAT15A.py  get_profile_point_series_OAT15A.py  plane_QA.py  plane_ind_samples.py  plane_line_skewness.py  plane_rstresses.py  plane_skewness.py  plot_CRM_wing_contour.py  plot_TS.py  plot_recirculation_contours_3AoA.py  plotlines.py  setup.cfg  setup.py  setup_line_plot.py  surface_means.py  surface_series.py  tecreader.py  wake_HTP_zline.py  wake_HTP_zline_STAB2018.py  wake_config.py  wake_contours.py  wake_contours_OAT15A.py  wake_grid.py  wake_grid_rstress_uncertainty.py  wake_vort_thickness.py  wake_zline_QA.py  wake_zline_skewness.py  wakevort.py
.github/: ISSUE_TEMPLATE.md
calc/: stats.py
example/wake/: calc_all_raw.py  extract_centerline.py  plot_anisotropy.py
flowpost/: autocorr.py
flowpost/calc/: stats.py
flowpost/example/wake/: wake_config.py
flowpost/wake/: data.py  wake_stats.py
flowpost/wake/helpers/: wake_stats.py
signal_fun/: autocorr.py
src/flowpost/: __init__.py  stats.py
src/flowpost/common/: case.py  data_helpers.py  wake_config.py
src/flowpost/configs/: CRM_WT.json  config_LSS.json
src/flowpost/utils/: loaders.py  logconf.py  parse_tecplot_helpers.py  utils.py
wake/example/: calc_all_raw.py  wake_config.py
wake/helpers/: data_class.py  wake_stats.py
wake_analysis/: wake_config.py
wake_analysis/helpers/: wake_stats.py
wake_analysis/process_rawdata/: README.md
(+11 files in other folders)
