[metadata]
name = flowpost
author = Andreas Waldmann
author_email = mail@awaldmann.com
description= = Unsteady Flow Field Analysis for CFD Data
license = MIT license
include_package_data=True
keywords = tecplot
version = 0.1.0
url = https://github.com/awaldm/flowpost

[options.extras_require]
test = 
    pytest
    flake8

[options]
zip_safe = False
package_dir=
    =src
packages=find:
[options.packages.find]
where=src

[flake8]
max-line-length = 88
ignore = E800, W503, C812, C813, C815, C818, C819, C408
